[ruby/prism] Reject endless method as a block parameter default

Fixes [Bug #21661]

https://github.com/ruby/prism/commit/475fa46a82